// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering with 0 filters 1`] = `
.c1 {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-bottom: 8px;
  margin-right: 16px;
  margin-top: 0px;
  padding-left: 8px;
  padding-right: 16px;
}

.c2:active {
  opacity: 0.56;
}

.c2:hover,
.c2:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c2:active {
  opacity: 0.24;
}

.c2:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: inline-block;
  transition: color .3s;
  margin-right: 4px;
  color: rgba(255,255,255,0.24);
  font-size: 18px;
}

.c11 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c13 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-bottom: 4px;
  margin-right: 4px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
  flex-wrap: wrap;
}

.c7 {
  box-sizing: border-box;
  display: flex;
}

.c8 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
  align-items: center;
}

.c12 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  border-radius: 8px;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c12 > thead > tr > th,
.c12 > tbody > tr > th,
.c12 > tfoot > tr > th,
.c12 > thead > tr > td,
.c12 > tbody > tr > td,
.c12 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c12 > thead > tr > th:first-child,
.c12 > tbody > tr > th:first-child,
.c12 > tfoot > tr > th:first-child,
.c12 > thead > tr > td:first-child,
.c12 > tbody > tr > td:first-child,
.c12 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c12 > thead > tr > th:last-child,
.c12 > tbody > tr > th:last-child,
.c12 > tfoot > tr > th:last-child,
.c12 > thead > tr > td:last-child,
.c12 > tbody > tr > td:last-child,
.c12 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c12 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c12 > thead > tr > th .c4 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c12 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c12 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c12 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c12 tbody > tr:last-child td:first-child {
  border-bottom-left-radius: 8px;
}

.c12 tbody > tr:last-child td:last-child {
  border-bottom-right-radius: 8px;
}

.c10 {
  box-sizing: border-box;
  display: flex;
}

.c10 button {
  background: none;
  border: none;
  border-radius: 200px;
  cursor: pointer;
  padding: 0;
  margin: 0 0 0 8px;
  outline: none;
  transition: all 0.3s;
  text-align: center;
}

.c10 button:hover,
.c10 button:focus {
  background: #1C254D;
}

.c10 button:hover .c4,
.c10 button:focus .c4 {
  opacity: 1;
}

.c10 button .c4 {
  opacity: 0.4;
  font-size: 20px;
  transition: all 0.3s;
}

.c6 {
  padding: 12px 16px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: end;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  justify-content: end;
}

.c3 {
  line-height: normal;
  background-color: #111B48;
  font-weight: normal;
  border: 1px solid rgba(255,255,255,0.24);
  color: #fff;
}

.c3:hover,
.c3:focus {
  background: #2C3A73;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      style="position: relative;"
    >
      <button
        class="c2 c3"
        kind="border"
      >
        <span
          class="c4 c5 icon icon-add "
          color="rgba(255,255,255,0.24)"
          font-size="4"
        />
        Add Filters
      </button>
    </div>
  </div>
  <div
    style="min-width: min-content;"
  >
    <nav
      class="c6"
    >
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
            color="primary.contrastText"
          >
            SHOWING 
            <strong>
              1
            </strong>
             - 
            <strong>
              4
            </strong>
             
            of 
            <strong>
              4
            </strong>
          </div>
        </div>
        <div
          class="c10"
        >
          <button
            disabled=""
            title="Previous Page"
          >
            <span
              class="c4 c11 icon icon-arrow-left-circle "
              color="light"
              font-size="3"
            />
          </button>
          <button
            disabled=""
            title="Next Page"
          >
            <span
              class="c4 c11 icon icon-arrow-right-circle "
              color="light"
              font-size="3"
            />
          </button>
        </div>
      </div>
    </nav>
    <table
      class="c12"
    >
      <thead>
        <tr>
          <th>
            Name
          </th>
          <th>
            Labels
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Randall Hines
          </td>
          <td>
            <div
              class="c13"
              kind="secondary"
            >
              country: Italy
            </div>
            <div
              class="c13"
              kind="secondary"
            >
              owner: username05
            </div>
            <div
              class="c13"
              kind="secondary"
            >
              env: prod
            </div>
          </td>
        </tr>
        <tr>
          <td>
            Fanny Bryant
          </td>
          <td>
            <div
              class="c13"
              kind="secondary"
            >
              country: South Korea
            </div>
            <div
              class="c13"
              kind="secondary"
            >
              owner: username10
            </div>
            <div
              class="c13"
              kind="secondary"
            >
              env: dev
            </div>
          </td>
        </tr>
        <tr>
          <td>
            Max Williams
          </td>
          <td>
            <div
              class="c13"
              kind="secondary"
            >
              country: France
            </div>
            <div
              class="c13"
              kind="secondary"
            >
              owner: username07
            </div>
            <div
              class="c13"
              kind="secondary"
            >
              env: prod
            </div>
          </td>
        </tr>
        <tr>
          <td>
            Sophia Lloyd
          </td>
          <td>
            <div
              class="c13"
              kind="secondary"
            >
              country: USA
            </div>
            <div
              class="c13"
              kind="secondary"
            >
              owner: username03
            </div>
            <div
              class="c13"
              kind="secondary"
            >
              env: dev
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`rendering with 2 filters 1`] = `
.c1 {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-bottom: 8px;
  margin-right: 16px;
  margin-top: 0px;
  padding-left: 8px;
  padding-right: 16px;
}

.c2:active {
  opacity: 0.56;
}

.c2:hover,
.c2:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c2:active {
  opacity: 0.24;
}

.c2:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: inline-block;
  transition: color .3s;
  margin-right: 4px;
  color: rgba(255,255,255,0.24);
  font-size: 18px;
}

.c8 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
}

.c14 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c7 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all .3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 4px;
  background-color: #222C59;
}

.c7 .c4 {
  color: inherit;
}

.c7:disabled {
  color: rgba(255,255,255,0.3);
}

.c7:disabled {
  color: rgba(255,255,255,0.3);
}

.c7:hover,
.c7:focus {
  background: rgba(255,255,255,0.1);
}

.c16 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-bottom: 4px;
  margin-right: 4px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
  flex-wrap: wrap;
}

.c10 {
  box-sizing: border-box;
  display: flex;
}

.c11 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
  align-items: center;
}

.c15 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  border-radius: 8px;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c15 > thead > tr > th,
.c15 > tbody > tr > th,
.c15 > tfoot > tr > th,
.c15 > thead > tr > td,
.c15 > tbody > tr > td,
.c15 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c15 > thead > tr > th:first-child,
.c15 > tbody > tr > th:first-child,
.c15 > tfoot > tr > th:first-child,
.c15 > thead > tr > td:first-child,
.c15 > tbody > tr > td:first-child,
.c15 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c15 > thead > tr > th:last-child,
.c15 > tbody > tr > th:last-child,
.c15 > tfoot > tr > th:last-child,
.c15 > thead > tr > td:last-child,
.c15 > tbody > tr > td:last-child,
.c15 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c15 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c15 > thead > tr > th .c4 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c15 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c15 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c15 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c15 tbody > tr:last-child td:first-child {
  border-bottom-left-radius: 8px;
}

.c15 tbody > tr:last-child td:last-child {
  border-bottom-right-radius: 8px;
}

.c13 {
  box-sizing: border-box;
  display: flex;
}

.c13 button {
  background: none;
  border: none;
  border-radius: 200px;
  cursor: pointer;
  padding: 0;
  margin: 0 0 0 8px;
  outline: none;
  transition: all 0.3s;
  text-align: center;
}

.c13 button:hover,
.c13 button:focus {
  background: #1C254D;
}

.c13 button:hover .c4,
.c13 button:focus .c4 {
  opacity: 1;
}

.c13 button .c4 {
  opacity: 0.4;
  font-size: 20px;
  transition: all 0.3s;
}

.c9 {
  padding: 12px 16px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: end;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  justify-content: end;
}

.c3 {
  line-height: normal;
  background-color: #111B48;
  font-weight: normal;
  border: 1px solid rgba(255,255,255,0.24);
  color: #fff;
}

.c3:hover,
.c3:focus {
  background: #2C3A73;
}

.c6 {
  display: flex;
  align-items: center;
  cursor: pointer;
  line-height: 16px;
  height: 30px;
  max-width: 200px;
  margin-right: 16px;
  margin-bottom: 8px;
  padding: 0;
  border: 1px solid rgba(255,255,255,0.24);
  border-radius: 4px;
  color: rgba(255,255,255,0.87);
  background-color: #111B48;
  font-weight: regular;
  font-size: 12px;
}

.c6:hover,
.c6:focus {
  background: #2C3A73;
}

.c6 > span {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding: 2px 4px 2px 12px;
}

.c6 button {
  color: rgba(255,255,255,0.87);
  border-radius: 0;
  font-size: 14px;
  min-width: 10px;
  height: 100%;
  border-bottom-right-radius: 4px;
  border-top-right-radius: 4px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      style="position: relative;"
    >
      <button
        class="c2 c3"
        kind="border"
      >
        <span
          class="c4 c5 icon icon-add "
          color="rgba(255,255,255,0.24)"
          font-size="4"
        />
        Add Filters
      </button>
    </div>
    <div
      class="c6"
    >
      <span
        title="env: prod"
      >
        env: prod
      </span>
      <button
        class="c7"
      >
        <span
          class="c4 c8 icon icon-close "
          color="light"
        />
      </button>
    </div>
    <div
      class="c6"
    >
      <span
        title="country: France"
      >
        country: France
      </span>
      <button
        class="c7"
      >
        <span
          class="c4 c8 icon icon-close "
          color="light"
        />
      </button>
    </div>
  </div>
  <div
    style="min-width: min-content;"
  >
    <nav
      class="c9"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
            color="primary.contrastText"
          >
            SHOWING 
            <strong>
              1
            </strong>
             - 
            <strong>
              1
            </strong>
             
            of 
            <strong>
              1
            </strong>
          </div>
        </div>
        <div
          class="c13"
        >
          <button
            disabled=""
            title="Previous Page"
          >
            <span
              class="c4 c14 icon icon-arrow-left-circle "
              color="light"
              font-size="3"
            />
          </button>
          <button
            disabled=""
            title="Next Page"
          >
            <span
              class="c4 c14 icon icon-arrow-right-circle "
              color="light"
              font-size="3"
            />
          </button>
        </div>
      </div>
    </nav>
    <table
      class="c15"
    >
      <thead>
        <tr>
          <th>
            Name
          </th>
          <th>
            Labels
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Max Williams
          </td>
          <td>
            <div
              class="c16"
              kind="secondary"
            >
              country: France
            </div>
            <div
              class="c16"
              kind="secondary"
            >
              owner: username07
            </div>
            <div
              class="c16"
              kind="secondary"
            >
              env: prod
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
